--- a/Furniture-Moving-Project/src/main/resources/templates/customer/requests.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/customer/requests.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link th:href="@{/homepage/css/style.css}" rel="stylesheet">
-    
+
     <!-- CSS chung của project -->
     <link rel="stylesheet" th:href="@{/dashboard/css/main.css}">
     <!-- CSS riêng cho trang danh sách -->
@@ -124,7 +124,7 @@
                                 </span>
                             </div>
 
-                            <!-- REQUEST STATUS (hiển thị thân thiện, vẫn giữ class status-* cho màu + realtime) -->
+                            <!-- REQUEST STATUS -->
                             <div class="fm-badge js-status-badge"
                                  th:classappend="' status-' + ${r.status}">
                                 <span class="fm-badge-dot"></span>
